--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0",
-    "node": "^22.11.0"
+    "mongoose": "^8.8.0"
   },
   "scripts": {
     "start": "node app.js"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
   }
 }
