--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "http": "^0.0.1-security",
+    "mongoose": "^8.8.0",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.8.1"
   },
   "scripts": {
     "start": "node app.js"
